--- a/docs/math/sketches/5/_2.md
+++ b/docs/math/sketches/5/_2.md
@@ -4,7 +4,9 @@
 
 ::: {.callout-tip icon=false collapse=false}
 ## A prop
-A symmetric strict monoidal category $(\mathcal{C}, 0,+)$ for which $Ob(\mathcal{C})=\mathbb{N}$ and the monoidal product on objects is given by addition.
+A symmetric strict monoidal category $(\mathcal{C}, 0,+)$ for which 
+$Ob(\mathcal{C})=\mathbb{N}$ and the monoidal product on objects is given by 
+addition.
 :::
 
 
