--- a/docs/phil/people/brandom/antirep/index.qmd
+++ b/docs/phil/people/brandom/antirep/index.qmd
@@ -1,6 +1,13 @@
 ---
 title: Antirepresentationalism
 categories: 🟣
+listing:
+  - id: content
+    type: table 
+    categories: false
+    page-size: 100000
+    filter-ui: true
+    fields: ["title"]
 ---
 
 A lecture series taught in 2020. The course website is 
