--- a/docs/phil/people/brandom/sellars19/1.qmd
+++ b/docs/phil/people/brandom/sellars19/1.qmd
@@ -2,20 +2,21 @@
 title: Lecture 1
 ---
 
-Sellars is a *great* philospher:
+Sellars is a *great* philosopher. This is what that means to Brandom:
 
-- work being transformative 
-  - when you understand it, you then view many other central problems in 
-    philosophy differently) 
-  - deep as in radical, going to the roots
-  - Not necessary influential (e.g. Quine) 
-- work is rich / inexhaustible
-  - every time you go back to it you find something new
+1. the work being transformative 
+    - when you understand it, you then view many other central problems in 
+      philosophy differently) 
+    - deep as in radical, going to the roots
+    - Not necessary influential (e.g. as Quine was) 
+2. the work being rich / inexhaustible
+    - every time you go back to it you find something new
 
 # Quotes on describing, justifying, explaining
 
 Sellars is taking the notions of "describing", "justifying", "explaining" as 
-they are in practice rather than inventing an artifical formal meaning / invoking technical jargon.
+they are in practice rather than inventing an artifical formal meaning / 
+invoking technical jargon.
 
 - [Scientium mensura](/docs/phil/people/sellars/works/epm/scientia.qmd)
 - [Space of reasons](/docs/phil/people/sellars/works/epm/space_of_reasons.qmd)
@@ -48,3 +49,95 @@ that Kant was brought back into mainstream respectability in the Anglophone
 tradition. This changed in the late 60's (due to Strawson/Rawls). 
 
 Four of his ideas mattered a lot to Kant.
+
+## 1. Kant's normative turn
+Normative understanding of understanding / discursive practice. Discursive for 
+Kant *means* pertaining to concept usage (i.e. distinct from mere utterances / 
+noises).
+
+  - Kant saw that what distinguishes judgment (cognitive side) and intentionality (on practical side)
+    from habitual/learned responses from ordinary creatures:
+    - They are things the agents/knowers are *responsible for*.
+    - They are exercises of the authority of the agents/knowers (the authority 
+      to make ourselves responsible).
+
+This is something Kant shares with later Wittgenstein (e.g. 
+[children's game](/docs/phil/situations/childrensgame.qmd)).
+
+Difference between "us" and "it" is not ontological but rather *de*ontological.
+
+The minimum unit of awareness/experiences is the *judgment* (the minimum unit 
+you can take responsibility for), 
+[not the *concept*](/docs/phil/switcharoos/concept_judgment.qmd). 
+
+## 2. Rousseau's criterion of freedom into a definition of the normative
+
+- [Rousseau](/docs/phil/people/rousseau) said 
+  "Obedience to a law that one has laid oneself is freedom."
+- Kant turned this around to distinguish *constraint by norms* from 
+  *constraint by power*.
+- Discussed in [Some Reflections on Language Games](/docs/phil/people/sellars/works/some_reflections).
+
+## 3. Non-descriptive concepts
+
+In addition to concepts whose principle expressive job is to describe/explain 
+empirical goings-on, there are concepts whose principle expressive job it is 
+to make explicit the framework that makes description possible.
+
+- These are known *a priori* framework-explicating concepts 
+  (pure concepts of the understanding).
+- This is Kant's response to [Hume](/docs/phil/people/hume), 
+  for how we can understand the modal force 
+  of laws in virtue of their non-modal description.
+    - The answer is in the description framework itself.
+    - The fact that there are necessarily relations that concepts have among 
+      another makes description possible (a concept being contentful at all 
+      requires it to have some necessary relations to other concepts).
+
+What Sellars means by 'ushering philosophy from its Humean phase to its Kantian 
+phase' is putting categories front and center.
+  
+- Trying to *describe* the modal structure of the world or describe the 
+  space of possible worlds is to try to assimilate modal language into 
+  [descriptivism](/docs/phil/schools/descriptivism.qmd), rather than seeing 
+  them as playing a different expressive role
+- Sellars saw Kant as putting this other option on the table.
+
+## [Distinction between *phenomena* and *noumena*](/docs/phil/distinctions/made/noumena_phenomena.qmd) 
+
+{{< include /docs/phil/distinctions/made/_noumena_phenomena.md >}}
+
+## Some historical context
+
+Freiburg / Marburg schools of neo-Kantianism.
+
+See [SEP](/https://plato.stanford.edu/entries/neo-kantianism/)
+
+Sellars figured out that Carnap was actually a neo-Kantian even though Carnap 
+did not see himself this way. Carnap opened Sellars' eyes to "the new way of 
+words".
+
+American pragmatism also saw Kantian ideas updated in an empiricist mode.
+
+Quine got empiricism from CI Lewis, not his Kantianism. Sellars got 
+Kantianism from CI Lewis.
+
+Early Heidegger (of *Being and Time*) had strong neo-Kantian themes, in Brandom's 
+analysis, but it was pointed out to Brandom by Brun Christianen that those 
+elements were precisely the ones that Heidegger inherited from his teacher 
+Ricard, that he had not freed himself from. (late Heidegger looked back and 
+repudiated this work as a "merely anthropological work".)
+
+Moral of this historical aside: insidious neo-Kantianism - you can't be sure 
+whether you've been infected or not.
+
+## Development of Sellars thought
+
+Roywood Sellars was Sellars' father, a successful philosopher.
+
+Undergrad philosophy in Michigan working with his father. MA working on 
+Hussurl's phenomenology (you can see his father's critical realism showing 
+strongly in that thesis). He was a wrestler and a fencer. Failed to write a Kant 
+dissertation at Oxford, came to Harvard to work with Quine.
+
+Sellars had spent 10 years in academia without publishing anything. 
