--- a/docs/personal/index.qmd
+++ b/docs/personal/index.qmd
@@ -39,11 +39,12 @@ A non-exhaustive list of personal (not too-personal though) details:
 ### Dislikes
 - Traveling
 - Posed photos
+- Consistent sunlight 
 
 ### Quirks
 - When eating peanuts, eating the whole shell, too.
 - I once inadvertently did ([fashion](https://dartmouthfashioncouncildotcom.wordpress.com/2014/05/06/street-style-ft-kris-brown-14/)).
-- I have 3 lb of malic acid in my house.
+- I have 3 lb of [malic acid](https://en.wikipedia.org/wiki/Malic_acid) in my house at the time of creating this website.
 - Since 2015, I've journaled about each day's events, unintentionally in the 
   style of [The Stranger](https://en.wikipedia.org/wiki/The_Stranger_(Camus_novel)).
 - I make an odd noise when I sneeze.
