pre-obsidian-switch

--- a/docs/math/sketches/1/_6.md
+++ b/docs/math/sketches/1/_6.md
@@ -63,7 +63,7 @@
 {{< include /docs/math/propositions/_adjoint_functor_theorem_preorders.md >}}
 :::
 
-- If we replace the $\leq$ in [this proposition](#galois-alternate-form) with 
+- If we replace the $\leq$ in the Galois Connection (alternate form equation) with 
   $=$, then we obtain the notion of a [preorder isomorphism](/docs/math/defs/preorder_isomorphism.qmd).
 - Since left adjoints preserve [joins](5.qmd#join), we know a 
   [monotone map](/docs/math/defs/monotone_map.qmd) cannot have generative effects iff it is 
