--- a/docs/math/sketches/3/_2.md
+++ b/docs/math/sketches/3/_2.md
@@ -27,7 +27,7 @@
 :::
 
 ## Categories via path equations
-We can add constraints to a [free category](#freecat) which states that two 
+We can add constraints to a free category which states that two 
 paths are equal.
 
 ::: {.callout-important icon=false collapse=false}
