--- a/docs/math/sketches/5/_2.md
+++ b/docs/math/sketches/5/_2.md
@@ -173,7 +173,8 @@ For the prop **Rel**, provide the five aspects of props described above.
 ## Exercise 5-16
 <div id="5-16"/></div>
 
-Describe how [port graph composition](#pg-cat) looks, with respect to the visual representation of [Example 5.14](#ex-port-graph), and give a nontrivial example
+Describe how port graph composition looks, with respect to the visual
+representation of Example 5.14, and give a nontrivial example.
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
