--- a/docs/phil/people/fodor/index.qmd
+++ b/docs/phil/people/fodor/index.qmd
@@ -11,4 +11,14 @@ listing:
     - ../../../../backlinks/docs/phil/people/fodor/index.yml
 ---
 
-TODO
+Jerry Alan Fodor was an American philosopher in the fields of philosophy of mind and cognitive science. (1935-2017)
+
+![](/images/headshots/fodor.jpeg)
+
+He is called an *atomist* about 
+[representation](/docs/phil/definitions/representation.qmd) by Brandom when he talks about the 
+relation between 'horses' and *horses*. Fodor says we have to be able to 
+understand that in terms of those items and their relations, independently of 
+the relation of *horses* to any other representing, or of 'horses' to any other 
+represented things.
+- 'A' means *A* iff all and only *A*'s cause 'A's.
