--- a/docs/phil/definitions/semantics.qmd
+++ b/docs/phil/definitions/semantics.qmd
@@ -12,7 +12,15 @@ listing:
     - ../../../backlinks/docs/phil/definitions/semantics.yml
 ---
 
+
+## [Empiricism](/docs/phil/schools/empiricism.qmd)
 An empiricist approach to semantics wants to give semantics of an expression 
 in terms of its 
 [sense dependence](/docs/phil/distinctions/made/sense_dependence_reference.qmd) 
 rather than its reference dependence.
+
+## Functionalism
+The meaning of a word is the role it plays in inferential reason relations.
+
+## Crude causal theory
+See [Jerry Fodor](/docs/phil/people/fodor).
