--- a/docs/phil/distinctions/made/ing_ed.qmd
+++ b/docs/phil/distinctions/made/ing_ed.qmd
@@ -1,9 +1,17 @@
 ---
 title: -ing/-ed distinction
 categories: ⚪
+listing:
+  id: backlinks
+  type: table
+  page-size: 100000
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs/phil/distinctions/made/ing_ed.yml
 ---
 
-Observed by Sellars to be responsible for a lot of philosophical confusion.
+Observed by [Sellars](/docs/phil/people/sellars) to be responsible for a lot of philosophical confusion.
 
 Most interesting philosophical concepts come with a "-ing"/ "-ed"
 distinction that's crucial to understand the nature of. 
@@ -17,7 +25,7 @@ We need to distinguish the fact and the content.
 
 ## Justification 
 
-The [Agrippan trilemma](/docs/phil/problems/agrippan.qmd) can be thought of as 
+The [Agrippan trilemma](/docs/phil/problems/regress/agrippan.qmd) can be thought of as 
 caused by conflating act of justifying vs the state of being justified.
   
 ## Experience
@@ -27,7 +35,26 @@ Sellars thinks [Berkeley](/docs/phil/people/berkeley) was confused by this.
 
 ## Representation
 
-The representings and the represented.
+'Representation' is the relation between two relata: the representings and the 
+representeds. Making this distinction helps avoid the 
+[Cartesian](/docs/phil/distinctions/made/dualisms/mind_body.qmd) trap of thinking 
+of the fact of $X$ as being a representing (e.g. a thought about something)
+being an [*ontological*](/docs/phil/definitions/ontology.qmd) fact 
+(i.e. a statement about the true nature of $X$) 
+rather than a fact of how $X$ relates to other things (it could be 
+represented in one context and a representing in another). 
+
+# Perception
+
+# Judgement
+
+# Belief 
+
+# Desire
+
+# Intention
+
+# Action
 
 ## ???
 - You can't be inside the rules and outside talking about them at the same time.
