--- a/docs/notes.qmd
+++ b/docs/notes.qmd
@@ -15,3 +15,15 @@ listing:
 Organizing / interconnecting my notes helps me make sense of them. Also, I 
 make it all public as a discussion starter for friends + to give me pressure 
 to make them less trash.
+
+:::{.callout-warning}
+I tried making [Quarto](https://quarto.org/docs/websites/) into a 
+"personal wiki" but many features were difficult 
+for me to add personally[^1]. 
+
+I'm in the process of moving notes 
+[**here**](https://kris-brown.github.io/), generated from 
+[Obsidian](https://obsidian.md/) and [Quartz](https://quartz.jzhao.xyz/).
+:::
+
+[^1]: hover over link for preview, backlinks, linking by name, ...
